# LuaJIT

./: CMakeLists.txt
builds/: CMakeLists.txt
dynasm/: dynasm.lua
src/: lauxlib.h  lib_io.c  lib_math.c  lj_api.c  lj_asm.c  lj_dispatch.c  lj_ffrecord.c  lj_ir.c  lj_ircall.h  lj_obj.h  lj_opt_fold.c  lj_prng.c  lj_prng.h  lj_strscan.c  lj_vm.h  lj_vmmath.c  lua.h  vm_x64.dasc  vm_x86.dasc
src/host/: CMakeLists.txt  buildvm_lib.c  minilua.c
